# tamu-user-stories

./: .buildinfo  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/architecture/: 0000-upgrade-to-fedora6.doctree  0001-add-solr.doctree  0002-add-a-triplestore.doctree
.doctrees/extras/: 2001_iiif_presentation_3.doctree  2002_iiif_search.doctree
.doctrees/import_and_update/: 0003-batch-ingest.doctree  0004-batch-update.doctree  0005-batch-delete.doctree
.doctrees/misc/: 9999_template.doctree
.doctrees/modelling/: 1000-what-am-i.doctree  1001-allow-filesets.doctree  1002-collections-can-have.doctree  1003-not-all-files-are-canvases.doctree  1004-works-may-have-ranges.doctree
.doctrees/stories/: 0001-add-solr.doctree  (+10 more)
_sources/: index.rst.txt
architecture/: 0000-upgrade-to-fedora6.html  0001-add-solr.html  0002-add-a-triplestore.html
extras/: 2001_iiif_presentation_3.html  2002_iiif_search.html
import_and_update/: 0003-batch-ingest.html  0004-batch-update.html  0005-batch-delete.html
misc/: 9999_template.html
modelling/: 1000-what-am-i.html  1001-allow-filesets.html  1002-collections-can-have.html  1003-not-all-files-are-canvases.html  1004-works-may-have-ranges.html
stories/: 0000-upgrade-to-fedora6.html  0001-add-solr.html  0002-add-a-triplestore.html  0003-batch-ingest.html  0004-batch-update.html  0005-batch-delete.html  1000-what-am-i.html  1001-allow-filesets.html  1002-collections-can-have.html  1003-not-all-files-are-canvases.html  9999_template.html
(+23 files in other folders)
